<resources>
    <string name="app_name">GoCache</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="sing_out">Sign out</string>
    <string name="read_file_failed">File reading failed</string>
    <string name="file_read">File reading error</string>
    <string name="name_for_the_cache">name for the cache</string>
    <string name="comment_for_the_cache">comment for the cache</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="create_cache">Create cache</string>
    <string name="create_a_cache">Create a cache to the current location of your device.</string>
    <string name="cache_created_by">Cache created by</string>
    <string name="title_map">Map</string>
    <string name="caches_fount">Amount</string>
    <string name="night_mode">Night Mode</string>
    <string name="tracker_mode">Tracker mode</string>
    <string name="gocache">GoCache 2019</string>
</resources>
